# RustFinalProject

./: .gitignore  Cargo.toml  README.md  RUN.md  todo.txt
src/: graphics.rs  main.rs  model.rs
src/shaders/: matrix.wgsl
