[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = {version = "1.19.0", features = ["derive", "zeroable_maybe_uninit"]}
csv = "1.3.0"
itertools = "0.13.0"
na = "0.32.2"
nalgebra = "0.33.1"
ndarray = "0.16.1"
rust_webgpu = { path = "/home/cwd/Desktop/projects/rust/rust-webgpu" }
tokio = {version = "1.41.1", features = ["macros", "rt-multi-thread"]}
