[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = {version = "1.19.0", features = ["derive", "zeroable_maybe_uninit"]}
csv = "1.3.0"
itertools = "0.13.0"
na = "0.32.2"
nalgebra = "0.33.1"
ndarray = "0.16.1"
# FIX: Link is for path native to my (Max's) computer
# I will push the source code for my package when needed.
rust_webgpu = { path = "/home/cwd/Desktop/projects/rust/rust-webgpu" }
tokio = {version = "1.41.1", features = ["time","macros", "rt-multi-thread"]}
rand = "0.8"
renderdoc = "0.12.1"
libloading = "0.8.6"
